--- a/tip-calculator-app-main/styles.css
+++ b/tip-calculator-app-main/styles.css
@@ -65,7 +65,7 @@ body {
 .input-title {
     color: hsl(186, 14%, 43%);    
     font-weight: 700;
-    font-size: 0.8rem;
+    font-size: 1rem;
     margin-bottom: 5px;
 }
 
@@ -109,7 +109,7 @@ input[type=number]:focus {
         }
 
 .tip-percent {
-    margin-top: 2rem;
+    margin-top: 3rem;
 }
 
 .percent-container {
@@ -147,9 +147,51 @@ input[type=number]:focus {
 }
 
 .people {
-    margin-top: 2rem;
+    margin-top: 3rem;
 }
 
 .people > input {
     background-image: url("images/icon-person.svg");
+}
+
+.output-box {
+    display: grid;
+    grid-template-columns: 0.8fr 1fr;
+    grid-template-rows: 30fr 30fr 20fr 5fr 15fr;
+
+    padding: 2rem;
+    padding-top: 2.5rem;
+    padding-bottom: 2.5rem;
+}
+
+.title-main {
+    color: white;
+    font-size: 1rem;
+}
+
+.title-sub {
+    color: #7f9c9f;
+    font-size: 0.8rem;
+}
+
+.output-result {
+    text-align: right;
+    color: hsl(172, 67%, 45%);
+    font-size: 2.2rem;
+    font-weight: 700;
+}
+
+.resetButton {
+    grid-column: 1 / 3;
+    grid-row: 5 / 6;
+
+    font-family: 'Space Mono', monospace;
+    font-weight: 700;
+    font-size: 1rem;
+    text-transform: uppercase;
+    color: hsl(183, 100%, 15%);
+
+    border-width: 0px;
+    border-radius: 5px;
+    background-color: hsl(172, 67%, 45%);
 }
