--- a/tip-calculator-app-main/styles.css
+++ b/tip-calculator-app-main/styles.css
@@ -19,20 +19,20 @@ body {
 .grid-container {
     height: 100%;
     display: grid;
-    grid-template-columns: 20vw 60vw 20vw;
+    grid-template-columns: none;
     grid-template-rows: 15vh 85vh;
 }
 
 .logo-container{
+    grid-column: 1 / 3;
     grid-row: 1 / 2;
-    grid-column: 2 / 3;
     display: flex;
     justify-content: center;
     align-items: flex-end;
 }
 
 .tool-container { 
-    grid-column: 2 / 3;
+    grid-column: 1 / 3;
     grid-row: 1 / 3;
     display: flex;
     justify-content: center;
@@ -207,4 +207,48 @@ input[type=number]:focus {
 .inputStateSymbol {
     color: #00494d;
     font-weight: 700;
+}
+
+@media only screen and (max-height: 620px){
+    .logo-container{
+        justify-content: left;
+    }
+}
+
+
+@media only screen and (max-width: 600px){
+    .grid-container {
+        grid-template-rows: 15fr 85fr;
+    }
+    .tool-box {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        width: 100vw;
+    }
+    .tool-container {
+        grid-row: 2 / 3;
+    }
+    .input-box {
+        padding-right: 0px;
+        margin-bottom: 1rem;
+    }
+    .percent-container {
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 1fr 1fr 1fr;
+    }
+    .output-box{
+        padding-top: 1rem;
+        padding-bottom: 1rem;
+        padding: 1rem;
+        grid-template-rows: 25fr 35fr 20fr;
+    }
+    .resetButton {
+        grid-row: auto;
+    }
+    .logo-container {
+        justify-content: center;
+        align-items: center;
+    }
+
 }
